--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -25,3 +25,41 @@
     background-color: black;
   }
 }
+.controls {
+  position: relative;
+  width: 250px;
+  height: 250px;
+  .button {
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    &.randomize {
+      width: 100px;
+      height: 100px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    &.up {
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    &.down {
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    &.left {
+      top: 50%;
+      left: 0;
+      transform: translateY(-50%);
+    }
+    &.right {
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
+    }
+  }
+}
