--- a/src/scss/Grid.scss
+++ b/src/scss/Grid.scss
@@ -1,34 +1,24 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 300px;
-  border: 1px solid black;
+  height: 300px;
   &.level-4 {
     grid-template-columns: repeat(4, 1fr);
-    width: 400px;
   }
   &.level-5 {
     grid-template-columns: repeat(5, 1fr);
-    width: 500px;
   }
   .grid-item {
     border: 1px solid black;
-    width: 100px;
-    height: 100px;
+    border-radius: 5px;
+    margin: 1px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
   }
   .empty {
-    width: 100px;
-    height: 100px;
     border: 1px solid black;
     background-color: black;
   }
