--- a/src/scss/Grid.scss
+++ b/src/scss/Grid.scss
@@ -1,8 +1,10 @@
 .grid {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 300px;
   height: 300px;
+  margin-bottom: 40px;
   &.level-4 {
     grid-template-columns: repeat(4, 1fr);
   }
@@ -10,6 +12,7 @@
     grid-template-columns: repeat(5, 1fr);
   }
   .grid-item {
+    // position: absolute;
     border: 1px solid black;
     border-radius: 5px;
     margin: 1px;
@@ -17,6 +20,16 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    transition: 3s ease;
+    &.collapsed, .empty {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: 3s ease;
+    }
   }
   .empty {
     border: 1px solid black;
@@ -31,7 +44,13 @@
     position: absolute;
     width: 70px;
     height: 70px;
-    border-radius: 50%;
+    // border-radius: 50%;
+    box-shadow: 3px 3px;
+    transition: 0.1s ease;
+    &:active {
+      box-shadow: 0px 0px;
+      transform: translate(3px, 3px);
+    }
     &.randomize {
       width: 100px;
       height: 100px;
