--- a/src/scss/Level.scss
+++ b/src/scss/Level.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   width: 300px;
-
+  margin-bottom: 20px;
   .level-name {
     position: relative;
     padding: 5px 20px;
@@ -13,6 +13,7 @@
     border-radius: 5px;
     cursor: pointer;
     &.is-active {
+      color: white;
       &::after {
         position: absolute;
         top: 0;
@@ -22,7 +23,7 @@
         height: 100%;
         border-radius: 5px;
         z-index: -1;
-        background-color: yellowgreen;
+        background-color: #A31E46;
       }
     }
   }
